[package]
name = "cnctd_git"
version = "0.1.6"
edition = "2021"
authors = ["Connected Dot Inc.", "Kyle Ebner <kyle@cnctd.world>"]
description = "Git methods"
license = "MIT"
repository = "https://github.com/Connected-Dot/cnctd_git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.37", features = ["serde"] }
cnctd_rest = { version = "0.1.1", path = "../cnctd_rest" }
git2 = "0.18.3"
gitignores = "2.3.3"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
